--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2" />
-	    <title>Ejercicio 10.1</title>
+	    <title>iSem - Semana Santa Sevilla 2014</title>
 	    <meta charset="utf-8">
 		<link rel="stylesheet" href="js/jquery.mobile-1.3.2.css">
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
