--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 		<script src="js/jquery.mobile-1.3.2.min.js"></script>
 		<script type="text/javascript">
 			$(document).on('pageinit', '#index',function(e,data){    
+
+				var hermandades = [
+					['Cruz de Guía - La Borriquita','blue_MarkerA.png',37.388003,-5.993222],
+					['Primer Paso - La Borriquita','blue_MarkerB.png',37.387468,-5.993131],
+					['Cruz de Guía - Jesús Despojado','brown_MarkerA.png',37.384276,-5.994029],
+					['Primer Paso - Jesús Despojado','brown_MarkerB.png',37.385137,-5.994201],
+					['Segundo Paso - Jesús Despojado','brown_MarkerC.png',37.385188,-5.992366],
+					['Cruz de Guía - La Paz','darkgreen_MarkerA.png',37.384881,-5.992227],
+					['Primer Paso - La Paz','darkgreen_MarkerB.png',37.385853,-5.992248],
+					['Segundo Paso - La Paz','darkgreen_MarkerC.png',37.385947,-5.993214],
+					['Cruz de Guía - La Cena','green_MarkerA.png',37.385418,-5.993986],
+					['Primer Paso - La Cena','green_MarkerB.png',37.387507,-5.994244],
+					['Segundo Paso - La Cena','green_MarkerC.png',37.389084,-5.994147],
+					['Tercer Paso - La Cena','green_MarkerD.png',37.392348,-5.994877],
+					['Cruz de Guía - La Hiniesta','orange_MarkerA.png',37.392724,-5.994941],
+					['Primer Paso - La Hiniesta','orange_MarkerB.png',37.393158,-5.995649],
+					['Segundo Paso - La Hiniesta','orange_MarkerC.png',37.394467,-5.995241],
+					['Cruz de Guía - San Roque','paleblue_MarkerA.png',37.393557,-5.994506],
+					['Primer Paso - San Roque','paleblue_MarkerB.png',37.393416,-5.993721],
+					['Segundo Paso - San Roque','paleblue_MarkerC.png',37.392781,-5.992691],
+					['Cruz de Guía - La Estrella','pink_MarkerA.png',37.389672,-5.999093],
+					['Primer Paso - La Estrella','pink_MarkerB.png',37.388069,-6.000745],
+					['Segundo Paso - La Estrella','pink_MarkerC.png',37.385154,-6.003417],
+					['Cruz de Guía - La Amargura','purple_MarkerA.png',37.39541,-5.991234],
+					['Primer Paso - La Amargura','purple_MarkerB.png',37.39541,-5.991234],
+					['Segundo Paso - La Amargura','purple_MarkerC.png',37.39541,-5.991234],
+					['Cruz de Guía - El Amor','red_MarkerA.png',37.39009,-5.992618],
+					['Primer Paso - El Amor','red_MarkerB.png',37.39009,-5.992618],
+					['Segundo Paso - El Amor','red_MarkerC.png',37.39009,-5.992618]
+				];	
 			   var minZoomLevel = 16;
 
 			   var map = new google.maps.Map(document.getElementById('map_canvas'), {
@@ -18,14 +48,44 @@
 			      mapTypeId: google.maps.MapTypeId.ROADMAP
 			   });
 
-			   var HiniestaLat = new google.maps.LatLng(37.394565,-5.995198);
+				var geocoder = new google.maps.Geocoder();
 
-			   var HiniestaMrk = new google.maps.Marker({
-				    position: HiniestaLat,
-				    title:"La Hiniesta"
-				});
+			   for (var i = 0; i < hermandades.length; i++) {
 
-			   HiniestaMrk.setMap(map);
+			   		var item = hermandades[i];
+			   		var lat_aux = new google.maps.LatLng(item[2],item[3]);
+			   		var image_aux = new google.maps.MarkerImage('assets/markers/'+item[1],
+				      // This marker is 20 pixels wide by 32 pixels tall.
+				      new google.maps.Size(20, 34),
+				      // The origin for this image is 0,0.
+				      new google.maps.Point(0,0),
+				      // The anchor for this image is the base of the flagpole at 0,32.
+				      new google.maps.Point(0, 34));
+
+			   		var marker_aux = new google.maps.Marker({
+					    position: lat_aux,
+					    title:item[0],
+					    icon: image_aux
+					});
+
+				   	marker_aux.setMap(map);
+
+				   	var yourLocation = new google.maps.LatLng(item[2],item[3]);
+					geocoder.geocode({ 'latLng': yourLocation },processGeocoder);
+			   };
+
+				function processGeocoder(results, status){
+					if (status == google.maps.GeocoderStatus.OK) {
+						if (results[0]) {
+							alert(results[0].formatted_address);
+						} else {
+							alert('Google no retorno resultado alguno.');
+						}
+					} else {
+						alert("Geocoding fallo debido a : " + status);
+					}
+				}
+
 			});
 		</script>
 		<style type="text/css">
