--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
 		        <ul data-role="listview">
 				</ul>
 			</div>
+			<div data-role="footer" data-position="fixed">
+				hola
+			</div>
 		</div>
 	</body>
 </html>
