--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@
 				        'latLng': location_aux
 				    }, function(results, status) {
 				        if (status === google.maps.GeocoderStatus.OK) {
-				            //alert(results[0].formatted_address);
 				            var aux = results[0].formatted_address;
 				            console.log(j);
 				            hermandad_title = (hermandades[j])[0];
 				            hermandad_street = aux;
 				            hermandad_escudo = (hermandades[j])[4];
-				            $("#last_position_hermandades ul").prepend("<li><img src='assets/escudos/"+hermandad_escudo+"'><h3>"+hermandad_title+"</h3><p>"+hermandad_street+"</p></li>").slideDown("slow").listview('refresh');;
+				            $("#last_position_hermandades ul").prepend("<li><a href='#'><img src='assets/escudos/"+hermandad_escudo+"'><h3>"+hermandad_title+"</h3><p>"+hermandad_street+"</p></a></li>").listview('refresh');
 				        } else if (status === google.maps.GeocoderStatus.OVER_QUERY_LIMIT) {    
 				            setTimeout(function() {
 				                Geocoder(location_aux,j);
@@ -131,9 +130,17 @@
 		        <ul data-role="listview">
 				</ul>
 			</div>
-			<div data-role="footer" data-position="fixed">
-				hola
-			</div>
+			<div data-role="footer" data-id="foo1" data-position="fixed">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="a.html">Info</a></li>
+						<li><a href="b.html">Friends</a></li>
+						<li><a href="c.html">Albums</a></li>
+						<li><a href="d.html">Emails</a></li>
+						<li><a href="e.html">ddede</a></li>
+					</ul>
+				</div><!-- /navbar -->
+			</div><!-- /footer -->
 		</div>
 	</body>
 </html>
