custom icons navbar

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			<div data-role="footer" data-id="foo1" data-position="fixed">
 				<div data-role="navbar" class="nav-glyphish-example">
 					<ul>
-						<li><a id="enciclopedia" href="#" data-theme="c" data-icon="custom">Saber</a></li>
+						<li><a id="enciclopedia" href="#" data-theme="c" data-icon="custom"><small>Saber</small></a></li>
 						<li><a id="mapa" href="#" data-theme="c" data-icon="custom">Mapa</a></li>
 						<li><a id="check" href="#" data-theme="c" data-icon="custom">Check!</a></li>
 						<li><a id="perfil" href="#" data-theme="c" data-icon="custom">Mi perfil</a></li>
