custom icons navbar

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			    */clear: float;
 			}
 
-		    .nav-glyphish-example .ui-btn .ui-btn-inner { padding-top: 40px !important; }
+		    .nav-glyphish-example .ui-btn .ui-btn-inner { padding-top: 35px !important; }
 		    .nav-glyphish-example .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: none !important; border-radius: none !important; }
 		    #enciclopedia .ui-icon { background:  url(assets/icons/enciclopedia.png) 50% 50% no-repeat; background-size: 18px 26px; }
 		    #mapa .ui-icon { background:  url(assets/icons/mapa.png) 50% 50% no-repeat; background-size: 26px 21px;  }
@@ -128,7 +128,7 @@
     </head>
 	<body scroll="no">
 		<div data-role="page" id="index">
-			<div data-role="header" data-position="fixed">
+			<div data-role="header" data-position="fixed" data-theme="c">
 				<h1> Inicio </h1>
 				<div data-role="content" id="content">
 		            <div id="map_canvas" style="height:200px"></div>
