custom icons navbar

--- a/index.html
+++ b/index.html
@@ -119,11 +119,33 @@
 
 		    .nav-glyphish-example .ui-btn .ui-btn-inner { padding-top: 35px !important; }
 		    .nav-glyphish-example .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: none !important; border-radius: none !important; }
+
 		    #enciclopedia .ui-icon { background:  url(assets/icons/enciclopedia.png) 50% 50% no-repeat; background-size: 18px 26px; }
+		    #enciclopedia .ui-icon:visited { background:  url(assets/icons/enciclopedia_on.png) 50% 50% no-repeat; background-size: 18px 26px; }
+		    #enciclopedia .ui-icon:hover { background:  url(assets/icons/enciclopedia_on.png) 50% 50% no-repeat; background-size: 18px 26px; }
+		    #enciclopedia .ui-icon:active { background:  url(assets/icons/enciclopedia_on.png) 50% 50% no-repeat; background-size: 18px 26px; }
+
 		    #mapa .ui-icon { background:  url(assets/icons/mapa.png) 50% 50% no-repeat; background-size: 26px 21px;  }
+		    #mapa .ui-icon:visited { background:  url(assets/icons/mapa_on.png) 50% 50% no-repeat; background-size: 26px 21px;  }
+		    #mapa .ui-icon:hover { background:  url(assets/icons/mapa_on.png) 50% 50% no-repeat; background-size: 26px 21px;  }
+		    #mapa .ui-icon:active { background:  url(assets/icons/mapa_on.png) 50% 50% no-repeat; background-size: 26px 21px;  }
+
 		    #check .ui-icon { background:  url(assets/icons/check.png) 50% 50% no-repeat;  background-size: 20px 20px; }
+		    #check .ui-icon:visited { background:  url(assets/icons/check_on.png) 50% 50% no-repeat;  background-size: 20px 20px; }
+		    #check .ui-icon:hover { background:  url(assets/icons/check_on.png) 50% 50% no-repeat;  background-size: 20px 20px; }
+		    #check .ui-icon:active { background:  url(assets/icons/check_on.png) 50% 50% no-repeat;  background-size: 20px 20px; }
+
 		    #perfil .ui-icon { background:  url(assets/icons/perfil.png) 50% 50% no-repeat;  background-size: 24px 21px; }
+		    #perfil .ui-icon:visited { background:  url(assets/icons/perfil_on.png) 50% 50% no-repeat;  background-size: 24px 21px; }
+		    #perfil .ui-icon:hover { background:  url(assets/icons/perfil_on.png) 50% 50% no-repeat;  background-size: 24px 21px; }
+		    #perfil .ui-icon:active { background:  url(assets/icons/perfil_on.png) 50% 50% no-repeat;  background-size: 24px 21px; }
+
 		    #info .ui-icon { background:  url(assets/icons/info.png) 50% 50% no-repeat;  background-size: 28px 28px; }
+		    #info .ui-icon:visited { background:  url(assets/icons/info_on.png) 50% 50% no-repeat;  background-size: 28px 28px; }
+		    #info .ui-icon:hover { background:  url(assets/icons/info_on.png) 50% 50% no-repeat;  background-size: 28px 28px; }
+		    #info .ui-icon:active { background:  url(assets/icons/info_on.png) 50% 50% no-repeat;  background-size: 28px 28px; }
+		    
+		    
 		</style>
     </head>
 	<body scroll="no">
